@@ -73,8 +73,11 @@
 					<parameters>true</parameters>
 					<compilerArgs>
 						<arg>--add-exports</arg>
-						<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
 						<arg>java.base/sun.security.rsa=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
